--- a/jupyterthemes/styles/compiled/grade3.css
+++ b/jupyterthemes/styles/compiled/grade3.css
@@ -520,6 +520,12 @@ button.close {
 #running .panel-group .panel .panel-body .list_container .list_item {
  border-bottom: 1px solid rgba(180,180,180,.32);
 }
+.panel-default > .panel-heading {
+ color: #2c2c2c;
+ background: #ededed;
+ background-color: #ededed;
+ border: 1px solid #e5e5e5 !important;
+}
 .form-control {
  display: block;
  width: 100%;
@@ -676,13 +682,13 @@ table.dataframe,
 .rendered_html tr,
 .dataframe * {
  font-family: "Fira Code", monospace;
- font-size: 9pt !important;
+ font-size: 9.5pt !important;
  border: 1px solid #d6d6d6;
 }
 .dataframe th,
 .rendered_html th {
- font-family: "Fira Code", monospace;
- font-size: 9pt !important;
+ font-family: "Exo_2", sans-serif;
+ font-size: 10pt !important;
  font-weight: 450;
  border: 1px solid #c5c5c5;
  background: #e6e6e6;
@@ -690,7 +696,7 @@ table.dataframe,
 .dataframe td,
 .rendered_html td {
  font-family: "Fira Code", monospace;
- font-size: 9pt !important;
+ font-size: 9.5pt !important;
  color: #353535;
  background: #ffffff;
  border: 1px solid #d6d6d6;
@@ -699,7 +705,7 @@ table.dataframe,
 }
 .dataframe-summary-row tr:last-child,
 .dataframe-summary-col td:last-child {
- font-family: "Fira Code", monospace;
+ font-family: "Exo_2", sans-serif;
  font-size: 10pt !important;
  font-weight: 450;
  color: #353535;
@@ -798,11 +804,30 @@ div.output_subarea {
  flex: 1;
  max-width: 90%;
 }
+input.raw_input {
+ font-family: "Droid Sans Mono", monospace;
+ font-size: 11pt !important;
+ color: #303030;
+ background-color: #eaeaea;
+ border-color: #eaeaea;
+ background: #eaeaea;
+ width: auto;
+ vertical-align: baseline;
+ padding: 0em 0.25em;
+ margin: 0em 0.25em;
+ -webkit-box-shadow: none;
+ box-shadow: none;
+}
 div.widget-area {
  font-size: 11pt;
  background-color: #ffffff;
  background: #ffffff;
  color: #303030;
+}
+div.widget-area a:hover,
+a:focus {
+ color: #2c85f7;
+ text-decoration: underline;
 }
 div.widget_item.btn-group > button.btn.btn-default.widget-combo-btn {
  background: transparent;
@@ -810,28 +835,50 @@ div.widget_item.btn-group > button.btn.btn-default.widget-combo-btn {
  border: 1px solid #efefef;
  font-size: 11pt;
 }
-.widget-hbox {
- -webkit-box-align: inherit;
+div.widget-hbox {
+ -webkit-box-orient: horizontal;
+ -webkit-box-align: stretch;
  -moz-box-orient: horizontal;
  -moz-box-align: stretch;
+ box-orient: horizontal;
+ box-align: block;
+ display: block;
+ flex-direction: inherit;
+ align-items: inherit;
 }
-.widget-hbox .widget-label {
- font-family: "Exo_2", sans-serif;
- font-size: 11.5pt;
- min-width: 12ex;
- padding-right: 8px;
+div.widget-hbox .widget-label {
+ min-width: 10ex;
  padding-top: 5px;
- vertical-align: text-top;
+ padding-right: 0px;
  text-align: left;
+ margin-right: 1.5em;
 }
-.widget-hprogress {
+div.widget-hprogress {
  margin-top: 6px;
  min-width: 300px;
+}
+div.widget-area .widget-subarea {
+ padding: .44em .4em .4em 1px;
+ margin-left: 20px;
+ box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+ -webkit-box-flex: 0;
+ -moz-box-flex: 0;
+ box-flex: 0;
+ flex: 0;
+ -webkit-box-align: stretch;
+ -moz-box-align: inherit;
+ box-align: stretch;
+ display: block;
+ flex-direction: column;
+ align-items: stretch;
 }
 .progress {
  overflow: hidden;
  height: 22px;
  margin-bottom: 10px;
+ padding-left: 10px;
  background-color: #cbcbcb;
  border-radius: 3px;
  -webkit-box-shadow: none;
@@ -928,25 +975,25 @@ span.ansiblack {
  color: #333333;
 }
 span.ansiblue {
- color: #1e70c7;
+ color: #009e07;
 }
 span.ansigray {
- color: #656565;
+ color: #333333;
 }
 span.ansigreen {
- color: #333333;
+ color: #dc4384;
 }
 span.ansipurple {
  color: #653bc5;
 }
 span.ansicyan {
- color: #de143d;
+ color: #1e70c7;
 }
 span.ansiyellow {
- color: #dc4384;
+ color: #de143d;
 }
 span.ansired {
- color: #009e07;
+ color: #666666;
 }
 div.output-stderr {
  background-color: #ebb5b7;
@@ -955,7 +1002,7 @@ div.output-stderr pre {
  color: #000000;
 }
 div.js-error {
- color: #009e07;
+ color: #666666;
 }
 .ipython_tooltip {
  border: 1.5px solid #336fad;
@@ -987,6 +1034,33 @@ div.tooltiptext.bigtooltip {
  overflow-y: scroll;
  height: 400px;
  max-width: 800px;
+}
+div#pager {
+ background-color: #ffffff;
+ -webkit-box-shadow: none;
+ box-shadow: none;
+ z-index: 100;
+ top: auto !important;
+}
+div#pager pre {
+ color: #303030;
+ background-color: #efefef;
+ line-height: 170%;
+ padding: 0.4em;
+ border-color: transparent;
+}
+div#pager .ui-resizable-handle {
+ top: 0px;
+ height: 8px;
+ background: #336fad;
+ border-top: 1px solid #316aa5;
+ border-bottom: 1px solid #316aa5;
+}
+pre,
+code,
+kbd,
+samp {
+ white-space: pre-wrap;
 }
 .cm-s-ipython.CodeMirror {
  font-family: "Droid Sans Mono", monospace;
